# agent-loop

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  config.example.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
agent_loop/: __init__.py  __main__.py  cli.py  config.py
agent_loop/bridges/: __init__.py  base.py
agent_loop/bridges/telegram/: __init__.py  bot.py  commands.py  format.py  media.py
agent_loop/core/: claude.py  controller.py  nudges.py  session.py
agent_loop/loops/: digest.py  heartbeat.py  maintain.py  scheduler.py
agent_loop/memory/: fencing.py  index.py  manager.py  stats.py
agent_loop/search/: __init__.py  query.py  store.py
agent_loop/skills/: __init__.py  loader.py
agent_loop/tools/: notify.py  run_task.py
agent_loop/util/: logging.py  pidlock.py  text.py
examples/skills/daily-review/: SKILL.md
examples/skills/dependency-audit/: SKILL.md
examples/skills/http-health-check/: SKILL.md
examples/skills/repo-sync/: SKILL.md
examples/skills/ssl-check/: SKILL.md
examples/skills/system-health/: SKILL.md
tests/: test_memory_fencing.py  test_nudges.py  test_search_query.py  test_skill_examples.py
tools/: agent-notify  agent-run-task  agent-send-file
